Forced reflow fixed. Burger menu aligned

--- a/css/style.scss
+++ b/css/style.scss
@@ -3,95 +3,99 @@
 $modal-background-background-color: rgba(#ffffff, 0.1);
 
 body {
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 a.about-link {
-	font-weight: lighter;
-	color: rgb(101, 100, 104);
+    font-weight: lighter;
+    color: rgb(101, 100, 104);
 }
 
 .seperated {
-	margin: 1rem;
+    margin: 1rem;
 }
 
 .is-flex-centered {
-	vertical-align: middle;
-	line-height: 3.25rem;
+    vertical-align: middle;
+    line-height: 3.25rem;
 }
 
 .is-textured {
-	background-image: url('../img/waves1.png');
+    background-image: url('../img/waves1.png');
+}
+
+.navbar-brand {
+    font-size: 2.4em;
+}
+
+#global-nav-bar .navbar-burger {
+    height: auto;
+}
+
+.navbar-end .navbar-item {
+    font-size: 1.2em;
 }
 
 #global-nav-bar.navbar-large {
     background-color: transparent;
-	min-height: 9em;
+    min-height: 9em;
 
-	.navbar-brand {
-		font-size: 2.4em;
-	}
-
-	.navbar-end .navbar-item {
-		font-size: 1.2em;
-	}
-
-	a:hover {
-		background-color: rgba(#ffffff, 0.2);
-	}
+    a:hover {
+        background-color: rgba(#ffffff, 0.2);
+    }
 }
 
 #global-nav-bar .navbar-item {
-	transition: font-size 0.5s ease;
+    transition: font-size 0.5s ease;
 }
 
 .card-limit {
-	max-width: 15em;
+    max-width: 15em;
 }
 
 .is-smooth {
-	transition: 0.1s;
+    transition: 0.1s;
 }
 
 .is-smoother {
-	transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 .is-padded {
-	padding: 0.5em;
+    padding: 0.5em;
 }
 
 .navbar-space {
-	padding-top: 50px;
+    padding-top: 50px;
 }
 
 .testimonial {
-	position: relative;
-	overflow: hidden;
-	margin: 10px auto;
-	min-width: 220px;
-	max-width: 310px;
-	width: 100%;
-	color: #333;
-	text-align: left;
-	box-shadow: none !important;
+    position: relative;
+    overflow: hidden;
+    margin: 10px auto;
+    min-width: 220px;
+    max-width: 310px;
+    width: 100%;
+    color: #333;
+    text-align: left;
+    box-shadow: none !important;
 }
 
 .testimonial * {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .testimonial img {
-	max-width: 100%;
-	height: 80px;
-	width: 80px;
-	border-radius: 50%;
-	margin-right: 5px;
-	display: block;
-	z-index: 1;
-	position: absolute;
-	right: 60%;
+    max-width: 100%;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: block;
+    z-index: 1;
+    position: absolute;
+    right: 60%;
 }
 
 #landing-img {
@@ -99,104 +103,104 @@ a.about-link {
     margin-left: -1.5%;
     animation: monitorIn .5s ease-in-out .4s forwards; /* assign animation to iota with 'chatblips' as keyframe name */
     opacity: 0;
-	z-index: 2;
+    z-index: 2;
 }
 
 .testimonial blockquote {
-	display: block;
-	border-radius: 8px;
-	position: relative;
-	background-color: ghostwhite;
-	padding: 30px 50px 65px 50px;
-	font-size: 1.2rem;
-	font-weight: 500;
-	margin: 0 0 -40px;
-	line-height: 1.6em;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    display: block;
+    border-radius: 8px;
+    position: relative;
+    background-color: ghostwhite;
+    padding: 30px 50px 65px 50px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin: 0 0 -40px;
+    line-height: 1.6em;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
 
 .testimonial blockquote:before, .testimonial blockquote:after {
-	font-family: 'Font Awesome 5 Pro';
-	content: "\f10d";
-	position: absolute;
-	font-size: 20px;
-	opacity: 0.3;
-	font-style: normal;
+    font-family: 'Font Awesome 5 Pro';
+    content: "\f10d";
+    position: absolute;
+    font-size: 20px;
+    opacity: 0.3;
+    font-style: normal;
 }
 
 .testimonial blockquote:before {
-	top: 35px;
-	left: 20px;
+    top: 35px;
+    left: 20px;
 }
 
 .testimonial blockquote:after {
-	content: "\f10e";
-	right: 20px;
-	bottom: 35px;
+    content: "\f10e";
+    right: 20px;
+    bottom: 35px;
 }
 
 .testimonial .author {
-	margin: 0;
-	height: 80px;
-	display: block;
-	text-align: left;
-	color: white;
-	padding: 0 35px;
-	position: relative;
-	z-index: 0;
+    margin: 0;
+    height: 80px;
+    display: block;
+    text-align: left;
+    color: white;
+    padding: 0 35px;
+    position: relative;
+    z-index: 0;
 }
 
 .testimonial .author h5, .testimonial .author span {
-	left: 50%;
-	position: absolute;
-	opacity: 0.8;
-	padding: 3px 5px;
+    left: 50%;
+    position: absolute;
+    opacity: 0.8;
+    padding: 3px 5px;
 }
 
 .testimonial .author h5 {
-	text-transform: capitalize;
-	bottom: 60%;
-	margin: 0;
-	font-weight: 600;
-	font-size: 1.2rem;
-	color: navy;
+    text-transform: capitalize;
+    bottom: 60%;
+    margin: 0;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: navy;
 }
 
 .testimonial .author span {
-	font-size: 0.8em;
-	color: white;
-	top: 50%;
+    font-size: 0.8em;
+    color: white;
+    top: 50%;
 }
 
 .content-wrapper {
-	padding: 60px 0;
+    padding: 60px 0;
 }
 
 .footer {
-	padding: 3rem 1.5rem 1.5rem;
+    padding: 3rem 1.5rem 1.5rem;
 }
 
 .hovered {
-	background-color: #f5f5f5;
-	color: #363636;
+    background-color: #f5f5f5;
+    color: #363636;
 }
 
 .site {
-	display: flex;
-	min-height: 100vh;
-	flex-direction: column;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 .site-content {
-	flex: 1;
+    flex: 1;
 }
 
-@keyframes monitorIn{
-    from{
+@keyframes monitorIn {
+    from {
         transform: translateX(-30px);
         opacity: 0;
     }
-    to{
+    to {
         transform: translateX(0);
         opacity: 1;
     }
